--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,6 +1,8 @@
+@use 'variables' as *;
+
 body {
   margin: 0;
-  background-color: #282c34;
+  background-color: $background-dark;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
