--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,3 +9,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+a {
+  color: inherit;
+  text-decoration: none;
+  &:hover {
+    color: skyblue;
+  }
+}
